--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.1",
+    "@tailwindcss/line-clamp": "^0.2.1",
+    "heroicons-react": "^1.4.1",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@types/node": "^15.12.2",
+    "@types/react": "^17.0.11",
     "autoprefixer": "^10.0.4",
     "postcss": "^8.1.10",
-    "tailwindcss": "^2.1.1"
+    "tailwindcss": "^2.1.1",
+    "typescript": "^4.3.2"
   }
 }
